# snake

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  Snake
src/: apple.cpp  apple.h  application.cpp  application.h  constants.h  draw.cpp  draw.h  game-over-state.cpp  game-over-state.h  game-session.cpp  game-session.h  game-settings.h  game-state.cpp  game-state.h  game.h  igame-context.h  irenderer.h  iuser-interface.h  iwindow.h  main.cpp  raylib-renderer.cpp  raylib-renderer.h  raylib-ui.cpp  raylib-ui.h  raylib-window.cpp  raylib-window.h  snake-body.cpp  snake-body.h  snake.cpp  snake.h  types.h  user-interface.cpp  user-interface.h
src/components/: irender-component-2d.h  render-component-2d.cpp  render-component-2d.h  renderer.cpp  renderer.h
src/core/: entity.cpp  entity.h  idrawable.h  igame-state.h  irenderer.h  istate-machine.h  istate-machine.hpp  iuser-interface.h  iwindow.h  types.h
src/core/math/: transform-2d.hpp  vector-2d.hpp
src/engine/: application.cpp  application.h  engine-config.h
src/engine/config/: engine-config.h
src/game/: apple.cpp  apple.h  game-settings.h  gameplay-state-machine.cpp  gameplay-state-machine.h  snake-body.cpp  snake-body.h  snake.cpp  snake.h
src/game/game-state/: game-over-state.cpp  game-over-state.hpp  gameplay-state-machine.cpp  gameplay-state-machine.h  gameplay-state.cpp  gameplay-state.hpp  main-menu-state.cpp  main-menu-state.h  main-menu-state.hpp
src/game/game-states/: game-over-state.h  gameplay-state.cpp  gameplay-state.h
src/game/ui/: game-over-ui.cpp  game-over-ui.hpp  game-ui.cpp  game-ui.h  game-ui.hpp  main-menu-ui.cpp  main-menu-ui.hpp  main-menu.cpp  main-menu.h
src/platform/input/: iinput.hpp  input-manager.cpp  input-manager.hpp  key-codes.hpp
src/platform/window/: iwindow.h  window-config.h  window-manager.cpp  window-manager.hpp
src/platform/window/config/: window-config.hpp
src/raylib/: raylib-renderer.cpp  raylib-renderer.h  raylib-ui.cpp  raylib-ui.h  raylib-window.cpp  raylib-window.h
src/raylib/input/: raylib-input-adapter.cpp  raylib-input-adapter.hpp  raylib-input.cpp  raylib-input.hpp
src/raylib/renderer/: raylib-renderer-adapter.cpp  raylib-renderer-adapter.hpp  raylib-renderer.cpp  raylib-renderer.h
src/raylib/user-interface/: raylib-ui.cpp  raylib-ui.h  raylib-user-interface-adapter.cpp  raylib-user-interface-adapter.hpp
src/raylib/window/: raylib-window-adapter.cpp  raylib-window-adapter.hpp  raylib-window.cpp  raylib-window.h
src/render-2d/: irenderable.h  irenderer.h  render-manager.cpp  render-manager.h
src/renderer-2d/: irenderable.h  irenderer.h  render-manager.cpp  render-manager.h  render-manager.hpp
src/renderer-2d/components/: irender-component-2d.h  render-component-2d.cpp  render-component-2d.h
src/state-machine/: gameplay-state-machine.cpp  gameplay-state-machine.h  istate-machine.h
src/state-machine/game-states/: game-over-state.cpp  game-over-state.h  gameplay-state.cpp  gameplay-state.h  igame-state.h
tests/: CMakeLists.txt  apple.test.cpp  main.cpp  test-framework.cpp  test-framework.h
